Set MLFLOW_DOCKER_OPENJDK_VERSION
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/actions/setup-java/action.yml
+++ b/.github/actions/setup-java/action.yml
@@ -18,3 +18,7 @@ runs:
       with:
         java-version: ${{ inputs.java-version }}
         distribution: ${{ inputs.distribution }}
+
+    - name: Set MLFLOW_DOCKER_OPENJDK_VERSION
+      run: |
+        echo "MLFLOW_DOCKER_OPENJDK_VERSION=${{ inputs.java-version }}" >> $GITHUB_ENV
