--- a/.github/actions/setup-java/action.yml
+++ b/.github/actions/setup-java/action.yml
@@ -20,5 +20,6 @@ runs:
         distribution: ${{ inputs.distribution }}
 
     - name: Set MLFLOW_DOCKER_OPENJDK_VERSION
+      shell: bash
       run: |
         echo "MLFLOW_DOCKER_OPENJDK_VERSION=${{ inputs.java-version }}" >> $GITHUB_ENV
