--- a/docs/package.json
+++ b/docs/package.json
@@ -26,6 +26,7 @@
     "@docusaurus/core": "^3.6.3",
     "@docusaurus/plugin-client-redirects": "^3.6.3",
     "@docusaurus/preset-classic": "^3.6.3",
+    "@docusaurus/theme-mermaid": "^3.7.0",
     "@mdx-js/react": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.8.6",
