fix new flavors
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/packages/tracing/pyproject.toml
+++ b/packages/tracing/pyproject.toml
@@ -68,6 +68,8 @@ include = [
   "mlflow.legacy_databricks_cli*",
   "mlflow.prompt*",
   "mlflow.protos*",
+  "mlflow.pydantic_ai*",
+  "mlflow.smolagents*",
   "mlflow.store*",
   "mlflow.tracing*",
   "mlflow.tracking*",
