Update cross-version test to run tracing SDK test (#15538)
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -159,8 +159,15 @@ jobs:
       - name: Install mlflow & test dependencies
         run: |
           pip install -U pip wheel setuptools
-          pip install .[extras]
-          pip install -r requirements/test-requirements.txt
+          # For tracing SDK test, install the tracing package from the local path and minimal test dependencies
+          if [[ "${{ matrix.category }}" == "tracing-sdk" ]]; then
+            pip install packages/tracing
+            pip install pytest pytest-asyncio pytest-cov
+          # Other two categories of tests (model/autologging)
+          else
+            pip install .[extras]
+            pip install -r requirements/test-requirements.txt
+          fi
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
         run: |
           ${{ matrix.install }}
@@ -216,8 +223,15 @@ jobs:
       - name: Install mlflow & test dependencies
         run: |
           pip install -U pip wheel setuptools
-          pip install .[extras]
-          pip install -r requirements/test-requirements.txt
+          # For tracing SDK test, install the tracing package from the local path and minimal test dependencies
+          if [[ "${{ matrix.category }}" == "tracing-sdk" ]]; then
+            pip install packages/tracing
+            pip install pytest pytest-asyncio pytest-cov
+          # Other two categories of tests (model/autologging)
+          else
+            pip install .[extras]
+            pip install -r requirements/test-requirements.txt
+          fi
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
         run: |
           ${{ matrix.install }}
