--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -557,9 +557,7 @@ openai:
       ">= 1.33.0": "3.10"
     requirements:
       ">= 0.0.0": [
-          "pyspark",
           "tiktoken",
-          "aiohttp",
           "tenacity",
           # Required to run tests/openai/mock_openai.py
           "fastapi",
@@ -570,6 +568,7 @@ openai:
     run: |
       pytest tests/openai/test_openai_autolog.py tests/openai/test_openai_agent_autolog.py
     test_every_n_versions: 10
+    test_tracing_sdk: true
 
 dspy:
   package_info:
@@ -590,6 +589,7 @@ dspy:
       ">= 0.0.0": ["openai"]
     run: |
       pytest tests/dspy/test_dspy_autolog.py
+    test_tracing_sdk: true
 
 langchain:
   package_info:
@@ -640,27 +640,23 @@ langchain:
       # This causes installation of mlflow-skinny from stable version, while 'mlflow' points to the dev version,
       # resulting in a weird module conflict issue.
       pip install './skinny'
-      # Run all langchain tests except autologging and evaluation
-      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+      # Run all langchain tests except autologging
+      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
       PYDANTIC_VERSION=$(python -c "import pydantic; print(pydantic.__version__)")
       if [[ $PYDANTIC_VERSION == 1.* ]]; then
         pip install 'pydantic>=2' 'fastapi>=0.100.0'
         echo "Testing langchain model export with pydantic v2"
-        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py
       fi
   autologging:
     minimum: "0.1.0"
     maximum: "0.3.25"
     requirements:
       ">= 0.0.0": [
-          "pyspark",
           "openai",
           "google-search-results",
-          "psutil",
           "faiss-cpu",
-          "numexpr",
-          "spacy",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
           # Required to run tests/openai/mock_openai.py
           "fastapi",
@@ -694,7 +690,7 @@ langchain:
 
       # TODO: an unexpected issue happens when autolog test and evaluation test are run together, which need investigations
       pytest tests/langchain/test_langchain_autolog.py
-      pytest tests/langchain/test_langchain_evaluation.py
+    test_tracing_sdk: true
 
 langgraph:
   package_info:
@@ -731,6 +727,7 @@ langgraph:
       ">= 0.3.0": ["langgraph-prebuilt"]
     run: |
       pytest tests/langgraph/test_langgraph_autolog.py
+    test_tracing_sdk: true
 
 llama_index:
   package_info:
@@ -767,6 +764,7 @@ llama_index:
         ]
       "< 0.11.0": ["pydantic<2"]
     run: pytest tests/llama_index/test_llama_index_autolog.py tests/llama_index/test_llama_index_tracer.py
+    test_tracing_sdk: true
 
 ag2:
   package_info:
@@ -804,6 +802,7 @@ autogen:
           "autogen_ext",
         ]
     run: pytest tests/autogen
+    test_tracing_sdk: true
 
 gemini:
   package_info:
@@ -819,6 +818,7 @@ gemini:
       # Install legacy gemini SDK to ensure the integration works for the legacy SDK 
       pip install google-generativeai
       pytest tests/gemini
+    test_tracing_sdk: true
 
 anthropic:
   package_info:
@@ -834,6 +834,7 @@ anthropic:
     # Our CI runs tests for every minor version of the library by default, which results in
     # many test tasks for anthropic. Reducing the number of testing only for every 5 version.
     test_every_n_versions: 5
+    test_tracing_sdk: true
 
 crewai:
   package_info:
@@ -849,6 +850,7 @@ crewai:
       ">= 0.80.0": "3.10"
     requirements:
     run: pytest tests/crewai
+    test_tracing_sdk: true
 
 pydantic_ai:
   package_info:
@@ -877,6 +879,7 @@ pydantic_ai:
     requirements:
       ">= 0.0.0": ["mcp"]
     run: pytest tests/pydantic_ai
+    test_tracing_sdk: true
 
 smolagents:
   package_info:
@@ -892,6 +895,7 @@ smolagents:
     requirements:
       ">= 0.0.0": ["duckduckgo-search"]
     run: pytest tests/smolagents
+    test_tracing_sdk: true
 
 mistral:
   package_info:
@@ -909,6 +913,7 @@ mistral:
     maximum: "1.8.1"
     requirements:
     run: pytest tests/mistral
+    test_tracing_sdk: true
 
 sentence_transformers:
   package_info:
@@ -987,6 +992,9 @@ litellm:
           "uvicorn",
         ]
     run: pytest tests/litellm
+    # NB: LiteLLM tracing callback still depends on MLflowClient, so we need to migrate it before
+    # enabling tracing SDK tests. There are other issues like the one linked above, too.
+    test_tracing_sdk: false
 
 groq:
   package_info:
@@ -998,6 +1006,7 @@ groq:
     maximum: "0.26.0"
     requirements:
     run: pytest tests/groq
+    test_tracing_sdk: true
 
 bedrock:
   package_info:
@@ -1008,3 +1017,4 @@ bedrock:
     minimum: "1.33.0"
     maximum: "1.38.28"
     run: pytest tests/bedrock
+    test_tracing_sdk: true
