--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -326,7 +326,7 @@ jobs:
           pip install openai
           # Install databricks-agents from a pre-release wheel because the latest released version
           # is not compatible with MLflow master. Using --no-deps because it pings mlflow to 3.0.0rc2.
-          pip install https://ml-team-public-read.s3.us-west-2.amazonaws.com/wheels/rag-studio/dev/haru/databricks_agents-1.0.0rc1.dev0-20250515-py3-none-any.whl --no-deps
+          pip install https://ml-team-public-read.s3.us-west-2.amazonaws.com/wheels/databricks-agents/mlflow/databricks_agents-1.0.0rc3-py3-none-any.whl --no-deps
           pytest tests/genai --ignore tests/genai/test_genai_import_without_agent_sdk.py
 
       - name: Run Tests with Local Spark Session
