--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -171,7 +171,7 @@ lightgbm:
     maximum: "4.6.0"
     requirements:
       ">= 0.0.0": ["scikit-learn"]
-      "== 4.0.*": ["numpy<2"]
+      "< 4.4.0": ["numpy<2"]
     run: |
       pytest tests/lightgbm/test_lightgbm_model_export.py
 
