Only upload latest docs
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ jobs:
           command: |
             yarn sitemap https://mlflow.org/docs/latest/sitemap.xml ./build/latest/sitemap.xml
       - store_artifacts:
-          path: docs/build/
+          path: docs/build/latest
       - run:
           name: Test examples
           working_directory: docs/api_reference
