--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -701,6 +701,7 @@ langgraph:
     pip_release: "langgraph"
     install_dev: |
       pip install git+https://github.com/langchain-ai/langgraph#subdirectory=libs/langgraph
+      pip install git+https://github.com/langchain-ai/langgraph#subdirectory=libs/prebuilt
 
   models:
     minimum: "0.2.0"
