--- a/pyproject.toml
+++ b/pyproject.toml
@@ -281,7 +281,8 @@ exclude = [
 ]
 typing-extensions-allowlist = [
   # Docs: https://typing-extensions.readthedocs.io/en/latest/
-  "typing_extensions.Self", # Added in 4.0.0
+  "typing_extensions.Self",      # Added in 4.0.0
+  "typing_extensions.ParamSpec", # Added in 3.10.0
 ]
 # Rules that are only enabled for code examples.
 example-rules = ["lazy-builtin-import", "log-model-artifact-path"]
