--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -93,12 +93,9 @@ jobs:
         run: |
           source .venv/bin/activate
           source dev/setup-ssh.sh
-          for i in {1..100}; do
-            pytest tests/utils/test_rest_utils.py::test_databricks_sdk_retry_timeout_exceeded tests/utils/test_rest_utils.py::test_databricks_sdk_retry_backoff_calculation
-          done
-          # pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
-          #   --ignore-flavors --ignore=tests/examples --ignore=tests/evaluate \
-          #   --ignore tests/genai tests
+          pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
+            --ignore-flavors --ignore=tests/examples --ignore=tests/evaluate \
+            --ignore tests/genai tests
 
   py310:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
