--- a/mlflow/server/js/package.json
+++ b/mlflow/server/js/package.json
@@ -47,6 +47,7 @@
     "d3-selection": "^1.3.0",
     "dateformat": "3.0.3",
     "diff": "5.1.0",
+    "dompurify": "3.2.6",
     "file-saver": "1.3.8",
     "font-awesome": "4.7.0",
     "graphql": "^15.5.0",
