Migrate SQLAlchemyStore to use V3 trace schema
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ a.md
 
 # Ignore a gunicorn config file
 gunicorn.conf.py
+
+# Ignore CLAUDE.md files by default (unless intentionally added)
+CLAUDE.md
