Add span entities
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/packages/typescript/.eslintrc.json
+++ b/packages/typescript/.eslintrc.json
@@ -21,19 +21,13 @@
         "varsIgnorePattern": "^_"
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-non-null-assertion": "warn",
-    "@typescript-eslint/prefer-nullish-coalescing": "warn",
     "@typescript-eslint/prefer-optional-chain": "error",
     "@typescript-eslint/no-unnecessary-type-assertion": "error",
     "@typescript-eslint/no-loss-of-precision": "error",
-    "@typescript-eslint/consistent-type-imports": [
-      "error",
-      {
-        "prefer": "type-imports",
-        "disallowTypeAnnotations": false
-      }
-    ],
+    // We cannot type everything like user inputs, outputs, json, etc.
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
 
     // General JavaScript/TypeScript rules
     "no-console": ["warn", { "allow": ["warn", "error"] }],
@@ -53,5 +47,18 @@
     // Promise/Async rules
     "no-async-promise-executor": "error",
     "require-await": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.test.ts", "*.spec.ts", "examples/**/*.ts"],
+      "rules": {
+        "no-console": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off",
+        "@typescript-eslint/no-unsafe-argument": "off"
+      }
+    }
+  ]
 }
