--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -30,9 +30,13 @@ runs:
             python_version="3.9.18"
           fi
         elif [[ "$python_version" == "3.10" ]]; then
-          python_version="3.10.14"
+          if [ ${{ runner.os }} == "Windows" ]; then
+            python_version="3.10.11"
+          else
+            python_version="3.10.16"
+          fi
         else
-          echo "Invalid python version: '$python_version'. Must be '3.8', '3.9', or '3.10'."
+          echo "Invalid python version: '$python_version'. Must be '3.9', or '3.10'."
           exit 1
         fi
         echo "version=$python_version" >> $GITHUB_OUTPUT
