add test to py310 for now
Signed-off-by: serena-ruan <serena.rxy@gmail.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -120,7 +120,7 @@ jobs:
       - name: Run tests
         run: |
           python -c "import sys; assert sys.version_info[:2] == (3, 10), sys.version_info"
-          pytest tests/types/test_type_hints.py tests/pyfunc/test_pyfunc_model_with_type_hints.py
+          pytest tests/types/test_type_hints.py tests/pyfunc/test_pyfunc_model_with_type_hints.py tests/telemetry
       - name: Run databricks-connect related tests
         run: |
           # this needs to be run in a separate job because installing databricks-connect could break other 
