--- a/mlflow/R/mlflow/DESCRIPTION
+++ b/mlflow/R/mlflow/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-7803-7901")),
       person(family = "RStudio",
              role = "cph"))
-Maintainer: Matei Zaharia <matei@databricks.com>
+Maintainer: Ben Wilson <benjamin.wilson@databricks.com>
 Description: R interface to 'MLflow', open source platform for
     the complete machine learning life cycle, see <https://mlflow.org/>.
     This package supports installing 'MLflow', tracking experiments,
