--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: packages/typescript/package-lock.json
 
       - name: Install dependencies
